--- a/2020-10-06-circles/index.html
+++ b/2020-10-06-circles/index.html
@@ -6,7 +6,7 @@
 
         <title>Circles - GoshDarnGames P5JS</title>
 
-        <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+        <script src="../lib/p5.js"></script>
         <script src="sketch.js" ></script>
 
     </head>
