--- a/2020-11-03-harmonic-motion/index.html
+++ b/2020-11-03-harmonic-motion/index.html
@@ -8,6 +8,7 @@
 
         <script src="../lib/p5.min.js"></script>
         <script src="../lib/p5.sound.min.js"></script>
+        <script src="https://unpkg.com/p5.createloop@0.1.3/dist/p5.createloop.js"></script> 
         <script src="sketch.js" ></script>
 
     </head>
