Fix library links

--- a/sketches/2020-10-26-ecsy/index.html
+++ b/sketches/2020-10-26-ecsy/index.html
@@ -8,8 +8,8 @@
 
         <script src="https://ecsy.io/build/ecsy.js"></script>
 
-        <script src="../lib/p5.min.js"></script>
-        <script src="../lib/p5.sound.min.js"></script>
+        <script src="../../lib/p5.min.js"></script>
+        <script src="../../lib/p5.sound.min.js"></script>
         <script src="sketch.js" ></script>
 
     </head>
