--- a/sketches/2020-10-23-gravity/index.html
+++ b/sketches/2020-10-23-gravity/index.html
@@ -6,8 +6,8 @@
 
         <title>Gravity - GoshDarnGames P5JS</title>
 
-        <script src="../lib/p5.min.js"></script>
-        <script src="../lib/p5.sound.min.js"></script>
+        <script src="../../lib/p5.min.js"></script>
+        <script src="../../lib/p5.sound.min.js"></script>
         <script src="sketch.js" ></script>
         <script src="mover.js" ></script>
         <script src="attractor.js" ></script>
