--- a/sketches/2020-11-05-matrix/index.html
+++ b/sketches/2020-11-05-matrix/index.html
@@ -8,8 +8,8 @@
 
         <link rel="stylesheet" href="style.css">
 
-        <script src="../lib/p5.min.js"></script>
-        <script src="../lib/p5.sound.min.js"></script>
+        <script src="../../lib/p5.min.js"></script>
+        <script src="../../lib/p5.sound.min.js"></script>
         <script src="sketch.js" ></script>
 
     </head>
