--- a/sketches/2020-11-06-pendulum/index.html
+++ b/sketches/2020-11-06-pendulum/index.html
@@ -6,8 +6,8 @@
 
         <title>Pendulum - GoshDarnGames P5JS</title>
 
-        <script src="../lib/p5.min.js"></script>
-        <script src="../lib/p5.sound.min.js"></script>
+        <script src="../../lib/p5.min.js"></script>
+        <script src="../../lib/p5.sound.min.js"></script>
         <script src="sketch.js" ></script>
 
     </head>
