Add linebreaks to index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
 
       <h1>GoshDarnGames Javascript Sketches</h1>
 
-<ul><li><a href='sketches/2020-11-10-matterjs/index.html'>2020-11-10-matterjs</a></li><li><a href='sketches/2020-11-06-pendulum/index.html'>2020-11-06-pendulum</a></li><li><a href='sketches/2020-11-06-circle-fill/index.html'>2020-11-06-circle-fill</a></li><li><a href='sketches/2020-11-05-matrix/index.html'>2020-11-05-matrix</a></li><li><a href='sketches/2020-11-03-harmonic-motion/index.html'>2020-11-03-harmonic-motion</a></li><li><a href='sketches/2020-11-02-spiral/index.html'>2020-11-02-spiral</a></li><li><a href='sketches/2020-11-02-car/index.html'>2020-11-02-car</a></li><li><a href='sketches/2020-11-02-cannon/index.html'>2020-11-02-cannon</a></li><li><a href='sketches/2020-10-27-ecsy-gravity/index.html'>2020-10-27-ecsy-gravity</a></li><li><a href='sketches/2020-10-26-gravity-2/index.html'>2020-10-26-gravity-2</a></li><li><a href='sketches/2020-10-26-ecsy/index.html'>2020-10-26-ecsy</a></li><li><a href='sketches/2020-10-23-gravity/index.html'>2020-10-23-gravity</a></li><li><a href='sketches/2020-10-23-drag/index.html'>2020-10-23-drag</a></li><li><a href='sketches/2020-10-22-friction/index.html'>2020-10-22-friction</a></li><li><a href='sketches/2020-10-21-balloon/index.html'>2020-10-21-balloon</a></li><li><a href='sketches/2020-10-20-mouse-chase/index.html'>2020-10-20-mouse-chase</a></li><li><a href='sketches/2020-10-18-bounce-vector/index.html'>2020-10-18-bounce-vector</a></li><li><a href='sketches/2020-10-18-bounce-novector/index.html'>2020-10-18-bounce-novector</a></li><li><a href='sketches/2020-10-11-random-walk-bigger-steps/index.html'>2020-10-11-random-walk-bigger-steps</a></li><li><a href='sketches/2020-10-11-noise-walk/index.html'>2020-10-11-noise-walk</a></li><li><a href='sketches/2020-10-11-noise-brightness/index.html'>2020-10-11-noise-brightness</a></li><li><a href='sketches/2020-10-09-splatter/index.html'>2020-10-09-splatter</a></li><li><a href='sketches/2020-10-09-random-walk/index.html'>2020-10-09-random-walk</a></li><li><a href='sketches/2020-10-09-random-distribution/index.html'>2020-10-09-random-distribution</a></li><li><a href='sketches/2020-10-07-oscillator/index.html'>2020-10-07-oscillator</a></li><li><a href='sketches/2020-10-06-circles-2/index.html'>2020-10-06-circles-2</a></li><li><a href='sketches/2020-10-06-circles/index.html'>2020-10-06-circles</a></li></ul>
+<ul><li><a href='sketches/2020-11-10-matterjs/index.html'>2020-11-10-matterjs</a>
+</li><li><a href='sketches/2020-11-06-pendulum/index.html'>2020-11-06-pendulum</a>
+</li><li><a href='sketches/2020-11-06-circle-fill/index.html'>2020-11-06-circle-fill</a>
+</li><li><a href='sketches/2020-11-05-matrix/index.html'>2020-11-05-matrix</a>
+</li><li><a href='sketches/2020-11-03-harmonic-motion/index.html'>2020-11-03-harmonic-motion</a>
+</li><li><a href='sketches/2020-11-02-spiral/index.html'>2020-11-02-spiral</a>
+</li><li><a href='sketches/2020-11-02-car/index.html'>2020-11-02-car</a>
+</li><li><a href='sketches/2020-11-02-cannon/index.html'>2020-11-02-cannon</a>
+</li><li><a href='sketches/2020-10-27-ecsy-gravity/index.html'>2020-10-27-ecsy-gravity</a>
+</li><li><a href='sketches/2020-10-26-gravity-2/index.html'>2020-10-26-gravity-2</a>
+</li><li><a href='sketches/2020-10-26-ecsy/index.html'>2020-10-26-ecsy</a>
+</li><li><a href='sketches/2020-10-23-gravity/index.html'>2020-10-23-gravity</a>
+</li><li><a href='sketches/2020-10-23-drag/index.html'>2020-10-23-drag</a>
+</li><li><a href='sketches/2020-10-22-friction/index.html'>2020-10-22-friction</a>
+</li><li><a href='sketches/2020-10-21-balloon/index.html'>2020-10-21-balloon</a>
+</li><li><a href='sketches/2020-10-20-mouse-chase/index.html'>2020-10-20-mouse-chase</a>
+</li><li><a href='sketches/2020-10-18-bounce-vector/index.html'>2020-10-18-bounce-vector</a>
+</li><li><a href='sketches/2020-10-18-bounce-novector/index.html'>2020-10-18-bounce-novector</a>
+</li><li><a href='sketches/2020-10-11-random-walk-bigger-steps/index.html'>2020-10-11-random-walk-bigger-steps</a>
+</li><li><a href='sketches/2020-10-11-noise-walk/index.html'>2020-10-11-noise-walk</a>
+</li><li><a href='sketches/2020-10-11-noise-brightness/index.html'>2020-10-11-noise-brightness</a>
+</li><li><a href='sketches/2020-10-09-splatter/index.html'>2020-10-09-splatter</a>
+</li><li><a href='sketches/2020-10-09-random-walk/index.html'>2020-10-09-random-walk</a>
+</li><li><a href='sketches/2020-10-09-random-distribution/index.html'>2020-10-09-random-distribution</a>
+</li><li><a href='sketches/2020-10-07-oscillator/index.html'>2020-10-07-oscillator</a>
+</li><li><a href='sketches/2020-10-06-circles-2/index.html'>2020-10-06-circles-2</a>
+</li><li><a href='sketches/2020-10-06-circles/index.html'>2020-10-06-circles</a>
+</li></ul>
   </body>
 </html>
