--- a/sketches/2020-11-13-matterjs-plinko/index.html
+++ b/sketches/2020-11-13-matterjs-plinko/index.html
@@ -13,6 +13,7 @@
         <script src="sketch.js" ></script>
         <script src="ball.js" ></script>
         <script src="peg.js" ></script>
+        <script src="boundary.js" ></script>
 
     </head>
 
