--- a/sketches/2020-11-13-matterjs-plinko/index.html
+++ b/sketches/2020-11-13-matterjs-plinko/index.html
@@ -9,8 +9,10 @@
         <script src="../../lib/p5.min.js"></script>
         <script src="../../lib/p5.sound.min.js"></script>
         <script src="../../lib/matter.min.js"></script>
+        <script src="../../lib/CCapture.all.min.js"></script>
 
         <script src="sketch.js" ></script>
+        <script src="plinko.js" ></script>
         <script src="ball.js" ></script>
         <script src="peg.js" ></script>
         <script src="boundary.js" ></script>
