--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
       <h1>GoshDarnGames Javascript Sketches</h1>
 
-<ul><li><a href='sketches/2020-11-13-matterjs-plinko/index.html'>2020-11-13-matterjs-plinko</a>
+<ul><li><a href='sketches/2020-11-15-template-rework/index.html'>2020-11-15-template-rework</a>
+</li><li><a href='sketches/2020-11-13-matterjs-plinko/index.html'>2020-11-13-matterjs-plinko</a>
 </li><li><a href='sketches/2020-11-10-matterjs/index.html'>2020-11-10-matterjs</a>
 </li><li><a href='sketches/2020-11-06-pendulum/index.html'>2020-11-06-pendulum</a>
 </li><li><a href='sketches/2020-11-06-circle-fill/index.html'>2020-11-06-circle-fill</a>
