--- a/sketches/2020-11-15-template-rework/index.html
+++ b/sketches/2020-11-15-template-rework/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8">
 
+        <link rel="stylesheet" type="text/css" href="style.css" />
+
         <title>Sketch - GoshDarnGames P5JS</title>
 
         <script src="../../lib/p5.min.js"></script>
