--- a/sketches/2020-11-15-template-rework/index.html
+++ b/sketches/2020-11-15-template-rework/index.html
@@ -2,7 +2,11 @@
 <html>
 
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
+
+        <meta name="viewport" content="user-scalable=no"/>
+
+        <meta name="HandheldFriendly" content="true" />
 
         <link rel="stylesheet" type="text/css" href="style.css" />
 
