--- a/sketches/2020-11-20-matterjs-flow/index.html
+++ b/sketches/2020-11-20-matterjs-flow/index.html
@@ -15,6 +15,7 @@
         <script src="../../lib/p5.min.js"></script>
         <script src="../../lib/p5.sound.min.js"></script>
         <script src="../../lib/matter.min.js"></script>
+        <script src="../../lib/matter-wrap.js"></script>
         <script src="../../lib/CCapture.all.min.js"></script>
 
         <script src="main.js" ></script>
